# daisysp-wasm

./: .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  LICENSE  NOTES.md  README.md  package.json  rollup.config.js  tsconfig.json  vite.config.js
.github/actions/node/: action.yml
.github/workflows/: build-pkg.yml  build-wasm.yml  build-website.yml  on-pull-request.yml  on-push.yml
example/: README.md  index.html  jsconfig.json  package.json  vite.config.js
example/src/: demo.ts  main.js  main.ts  simple-synth.ts  style.css
lib/: em-es6-module.js
public/worklets/: AudioProcessor.js  wasm-worklet-processor.js
scripts/: build-js.sh  build-wasm.sh  build.sh  watch.js
scripts/utils/: copy.js  exec.js  index.js  mkdirp.js  task.js
src/: AudioProcessor.js  main.js  types.ts  wasm-audio-helper.js  wasm-audio-helper.ts  wasm-binding.ts  wasm-worklet-processor.js  wasm-worklet-processor.ts
worklet/: AudioProcessor.cc  AudioProcessor.h  processor_bind.cc
